--- a/docs/guidelines/examples/02.md
+++ b/docs/guidelines/examples/02.md
@@ -1,6 +1,25 @@
 ``` 
-# sentence-label A
+# sentence-label ex_02
 # visual-style 	bgColor:blue
-1	chủ tịch	_	NOUN	NOUN	_	0	root	_	_
-2	Nguyến Văn Nam	_	NOUN	NOUN	_	1	nmod	_	_
+1	chủ tịch	_	NOUN	NOUN	_	2	nmod	_	_
+2	Nguyễn Văn Nam	_	NOUN	NOUN	_	0	root	_	_
 ```
+
+``` 
+# sentence-label ex_03
+# visual-style 	bgColor:blue
+1	vợ_chồng	vợ_chồng	NOUN	NN	_	0	root	_	_
+2	Trương_Bá_Chi	Trương_Bá_Chi	PROPN	NNP	_	1	nmod	_	_
+```
+
+``` 
+# sentence-label ex_04
+# visual-style 	bgColor:blue
+1   Tổ_chức Tổ_chức NOUN    NN  _   0   root   _   _
+2   Nhà_nước    Nhà_nước    NOUN    NN  _   1   nmod    _   _
+3   Hồi_giáo    Hồi_giáo    NOUN    NN  _   2   nmod    _   _
+4   (   (   PUNCT   LBKT    _   5   punct   _   _
+5   IS  IS  PROPN   NNP _   1   appos   _   _
+6   )   )   PUNCT   RBKT    _   5   punct   _   _
+```
+
